# small-llama-model

./: README.md  bpe-parser.py  bpe.py  constants.py  gguf.py  gtokenizer.py  llama3.py  model-parser.py  model.py  pyproject.toml  run.py  run_tests.sh  test_model.py  test_tokens.py  tokens.py  util.py
src/: llama3.py  model.py  numeric_lines_reader.py
src/small_llama_model/: __init__.py  arun2.py  bpe.py  checks.py  constants.py  external-run.py  gguf.py  gtokenizer.py  llama3.py  numeric_lines_reader.py  run.py  token_reader_gguf.py  token_reader_impl.py  token_reader_numeric_lines.py  tokens.py
src/small_llama_model/core/: constants.py  model.py
src/small_llama_model/third/: llama3.py  pygguf.py
src/small_llama_model/tokens/: bpe.py  token_reader_gguf.py  token_reader_impl.py  token_reader_numeric_lines.py  tokens.py
src/small_llama_model/utils/: checks.py  common.py  prompts.py  utils.py
tests/: test_tokens.py  test_utils.py
